--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "package": "ncc build src/index.js --license licenses.txt",
     "package:watch": "npm run package -- --watch",
     "test": "(jest && make-coverage-badge --output-path ./badges/coverage.svg) || make-coverage-badge --output-path ./badges/coverage.svg",
-    "all": "npm run format:write && npm run lint && npm run test && npm run package"
+    "all": "npm run format:write && npm run lint && npm run test && npm run package",
+    "release": "npm run bundle &&   git tag -a -m 'Release' v1.2 && git push --follow-tags"
   },
   "license": "MIT",
   "eslintConfig": {
