--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "test": "(jest && make-coverage-badge --output-path ./badges/coverage.svg) || make-coverage-badge --output-path ./badges/coverage.svg",
     "all": "npm run format:write && npm run lint && npm run test && npm run package",
     "commit": "git add -A && git commit -m 'releasing' && git push",
-    "release": "npm run bundle && npm run commit && git tag -a -m 'Release' v1.7 && git push --follow-tags"
+    "release": "npm run bundle && npm run commit && git tag -a -m 'Release - downgraded node-fetch to v2' v1.8 && git push --follow-tags"
   },
   "license": "MIT",
   "eslintConfig": {
@@ -66,7 +66,7 @@
   },
   "dependencies": {
     "@actions/core": "^1.10.1",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^2.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.23.2",
